2007-08-14  Guillem Jover  <guillem@debian.org>

	* dpkg-split/main.c (rerr): Adjust string so that it gets merged by
	gettext with a similar one.

2007-08-14  Guillem Jover  <guillem@debian.org>

	* src/archives.c (linktosameexistingdir): Mark strings for translation.

2007-08-11  Ian Jackson  <iwj@ubuntu.com>

	* src/archives.c (linktosameexistingdir): New function.
	(tarobject): Call linktosameexistingdir if the tarball and the on-disk
	files are symlinks and ignore the symlink if it returns true.

2007-08-08  Ian Jackson  <iwj@ubuntu.com>

	* scripts/update-alternatives.pl: In the case where the slave is
	inapplicable do not attempt to create the slave link before
	removing it again.

2007-08-08  Guillem Jover  <guillem@debian.org>

	* src/configure.c (deferred_configure): Do not print a new line
	if maintainer_script_installed returned true.

2007-08-08  Guillem Jover  <guillem@debian.org>

	* dpkg-deb/build.c (do_build): Use NULL instead of '(char *)0'.
	* dpkg-deb/extract.c (movecontrolfiles, extracthalf): Likewise.
	* dpkg-deb/info.c (cu_info_prepare, info_prepare): Likewise.
	* src/cleanup.c (cu_prermupgrade, cu_prermdeconfigure)
	(cu_prerminfavour, cu_preinstverynew, cu_preinstnew)
	(cu_preinstupgrade, cu_postrmupgrade, cu_prermremove): Likewise.
	* src/configure.c (deferred_configure, suspend): Likewise.
	* src/help.c (maintainer_script_alternative)
	(ensure_pathname_nonexisting): Likewise.
	* src/processarc.c (process_archive): Likewise.
	* src/remove.c (deferred_remove, removal_bulk_remove_files)
	(removal_bulk_remove_configfiles): Likewise.

2007-08-08  Guillem Jover  <guillem@debian.org>

	* src/cleanup.c (cu_prermdeconfigure): Split call to
	maintainer_script_installed depending on the conflictor variable.
	* src/packages.c (dependencies_ok): Remove comment stating that
	Breaks needs to be implemented.
	* src/depcon.c (depisok): Likewise. Remove return at the beggining
	of the function checking for a Breaks dependency, that was