@@ -1,5 +1,16 @@
 2007-08-14  Guillem Jover  <guillem@debian.org>
 
+	* lib/parsehelp.c (parseerr): Switch from ternary operator to compose
+	a string to a conditional call to the function with two different
+	strings, making life easier for translators.
+	* src/archives.c (tarobject): Likewise.
+	* src/query.c (searchoutput): Switch from a loop with two iterations
+	and ternary operators to compose strings to a conditional with two
+	sequential calls with different strings, making life easier for
+	translators.
+
+2007-08-14  Guillem Jover  <guillem@debian.org>
+
 	* dpkg-split/main.c (rerr): Adjust string so that it gets merged by
 	gettext with a similar one.
 
